# world-cup-2026-predictions

./: .env.example  .gitignore  AGENTS.md  INITIAL_SETUP_WSL2.md  README.md  latest.csv  latest.json  manifest.json  prospective_evaluation.json  prospective_evaluation.md  prospective_matches.csv  prospective_scorecard.json  prospective_scorecard.md  pyproject.toml  upcoming.md
configs/: competition_categories.yaml  contextual_challenger_features.yaml  model.yaml  modeling_data.yaml  prospective_evaluation.yaml  shadow_contextual_evaluation.yaml  simulation.yaml  sources.yaml
data/: README.md
docs/: CONTEXTUAL_FEATURES.md  DATA_CONTRACT.md  ELO_RATINGS.md  EVALUATION_ARTIFACTS.md  LIVE_INGESTION.md  OPERATIONS.md  ROADMAP.md  SIMULATION_FALLBACK_AUDIT.md  STATIC_DASHBOARD.md  TEAM_NORMALIZATION.md  TOURNAMENT_SIMULATION.md
prompts/: CODEX_PROMPTS.md
scripts/: bootstrap_wsl.sh
shadow/: contextual_comparison.md  contextual_latest.csv  contextual_latest.json  contextual_scorecard.json  contextual_scorecard.md  contextual_upcoming.md  manifest.json
simulation/: bracket_summary.md  champion_probabilities.md  group_tables_summary.md  manifest.json  round_probabilities.md  team_probabilities.csv  team_probabilities.json
tests/: test_cli.py  test_config.py  test_contextual_challenger.py  test_contextual_features.py  test_dashboard_workflow.py  test_data_contracts.py  test_dixon_coles.py  test_elo_backtest.py  test_elo_ratings.py  test_historical_ingest.py  test_modeling_dataset.py  test_operational_predictions.py  test_operational_workflow.py  test_publication.py  (+10 more)
(+69 files in other folders)
