[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "worldcup2026"
version = "0.1.0"
description = "Reproducible World Cup 2026 prediction pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "lightgbm>=4.3",
  "numpy>=1.26",
  "pandas>=2.2",
  "pyarrow>=16",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "pyyaml>=6.0",
  "scikit-learn>=1.5",
  "scipy>=1.13",
  "statsmodels>=0.14",
  "typer>=0.12",
  "rich>=13.7",
]

[project.optional-dependencies]
notebooks = [
  "ipykernel>=6.29",
  "jupyterlab>=4.2",
  "matplotlib>=3.9",
]

[dependency-groups]
dev = [
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "respx>=0.21",
  "ruff>=0.5",
]

[project.scripts]
wc2026 = "worldcup2026.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/worldcup2026"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["worldcup2026"]
